--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ Loading required package: usethis
 usethis::create_package(path = "myPkgApp")
 ```
 
-When creating a new package in the IDE, I provide a name and the parent folder. New packages default to using `renv` and create a git repo. 
+When creating a new package in the IDE, I provide a name and the parent folder. New R packages use `roxygen2` (`roxygen = TRUE`) and check the package name (`check_name = TRUE`), and default to using `renv` and create a git repo. 
 
 ```{r rpkg-setup, out.width='70%', out.height='70%', echo=FALSE}
 knitr::include_graphics(path = "img/rpkg-setup.png")
@@ -82,6 +82,9 @@ library(golem)
 golem::create_golem(path = "myGolemApp")
 ```
 
+When creating a new `golem` package in the IDE, I provide the name and the parent folder. 
+
+New `golem` packages automatically perform a check on the name of the package (`check_name = TRUE`).
 
 ```{r golem-setup, out.width='70%', out.height='70%', echo=FALSE}
 knitr::include_graphics(path = "img/golem-setup.png")
@@ -142,6 +145,10 @@ rhino::init(dir = "myRhinoApp")
 ```
 
 
+When creating a new `rhino` package in the IDE, I provide the name and the parent folder. 
+
+New `rhino` packages automatically create GitHub Actions Continuous Integration (`github_actions_ci = TRUE`).
+
 ```{r rhino-setup, out.width='70%', out.height='70%', echo=FALSE}
 knitr::include_graphics(path = "img/rhino-setup.png")
 ```
@@ -200,4 +207,27 @@ cat myRhinoApp/config.yml
 
 ```{bash rhino-yml, echo=FALSE}
 cat myRhinoApp/rhino.yml
+```
+
+
+## `leprechaun` projects
+
+`leprechaun` apps are built using the same methods as R packages (`devtools` and `usethis`). 
+
+```{r create_package-myLeprechaunApp, eval=FALSE}
+usethis::create_package("myLeprechaunApp")
+```
+
+After the new project opens, install and load the `leprechaun` package, then run `leprechaun::scaffold()`:
+
+```{r scaffold-myLeprechaunApp, eval=FALSE}
+install.packages("leprechaun")
+library(leprechaun)
+leprechaun::scaffold()
+```
+
+When creating a new `leprechaun` package in the IDE, it's identical to the R package setup. 
+
+```{r leprechaun-setup, out.width='70%', out.height='70%', echo=FALSE}
+knitr::include_graphics(path = "img/leprechaun-setup.png")
 ```
