--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,36 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-`shiny-app-setups` contains setups for 1) R packages, 2) `golem` shiny apps, and 3) a `rhino` apps. 
+`shiny-app-setups` contains setups for 1) A vanilla shiny app (`VanillaApp`), 2) an app built as an R package, 2) a `golem` shiny app 3) a `rhino` app, and 4) a `leprechaun` app.  
 
-All projects were created in the RStudio IDE (with the default options selected). 
+All projects were created in console and in the RStudio IDE (with the default options selected). 
+
+## Basic shiny app 
+
+Building a shiny app from **RStudio's New Project Wizard** results in the following folder structure. 
+
+```{r vamilla-setup, out.width='70%', out.height='70%', echo=FALSE}
+knitr::include_graphics(path = "img/vanilla-setup.png")
+```
+
+### Folder structure 
+
+```{bash vanilla-tree, eval=FALSE}
+VanillaApp/
+  ├── VanillaApp.Rproj
+  ├── app.R
+  ├── renv
+  │   ├── activate.R
+  │   ├── library
+  │   │   └── R-4.2
+  │   ├── sandbox
+  │   │   └── R-4.2
+  │   ├── settings.dcf
+  │   └── staging
+  └── renv.lock
+
+7 directories, 5 files
+```
 
 ## R App (as a package)
 
@@ -266,3 +293,28 @@ myLeprechaunApp/
 ```{bash descr-leprechaun, echo=FALSE}
 cat myLeprechaunApp/DESCRIPTION
 ```
+
+## Shiny projects
+
+When creating a shiny app 
+
+### Folder structure 
+
+```{bash shiny-app, eval=FALSE}
+myShinyApp/
+    ├── app.R
+    ├── myShinyApp.Rproj
+    ├── renv
+    │   ├── activate.R
+    │   ├── library
+    │   │   └── R-4.2
+    │   │       └── x86_64-apple-darwin17.0
+    │   ├── sandbox
+    │   │   └── R-4.2
+    │   │       └── x86_64-apple-darwin17.0
+    │   └── settings.dcf
+    └── renv.lock
+
+8 directories, 5 files
+```
+
